@@ -116,3 +116,4 @@
 ( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 po/fi.po;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 po/it.po;  ) > 0.8.0cvs6.patchset
 ( cvs diff -u -r 1.1.2.123 -r 1.1.2.124 configure.ac;  ) > 0.9.0cvs1.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 po/fr.po;  ) > 0.9.0cvs2.patchset
+( cvs diff -u -r 1.1.2.82 -r 1.1.2.83 src/poppler_viewer.c;  ) > 0.9.1cvs1.patchset
