@@ -1,3 +1,8 @@
+2008-04-18 [colin]	0.9.1cvs1
+
+	* src/poppler_viewer.c
+		Use claws_unlink instead of g_unlink
+
 2008-04-18 [paul]	0.9.1
 
 	0.9.1 released
